index endpoint, functional test for index
