# todo-list-api/api/swagger/swagger.yaml
@@ -3,7 +3,7 @@ info:
   version: "0.0.1"
   title: Todo List Api
 # during dev, should point to your local machine
-host: localhost:3000
+host: localhost:3001
 # basePath prefixes all resource paths 
 basePath: /
 # 
@@ -35,9 +35,22 @@ paths:
         "200":
           description: Success
           schema:
-            # $ref: "#/definitions/HelloWorldResponse"
-            $ref: "#/definitions/ObjectResponse"
+            $ref: "#/definitions/HelloWorldResponse"
         # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /tasks:
+    x-swagger-router-controller: task
+    get:
+      description: display a list of all tasks
+      operationId: index
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/ListResponse"
         default:
           description: Error
           schema:
@@ -104,6 +117,10 @@ paths:
 definitions:
   ObjectResponse:
     type: object
+  ListResponse:
+    type: array
+    items: 
+      type: object
   HelloWorldResponse:
     required:
       - message
